--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,8 @@ django = "*"
 django-rest-framework = "*"
 python-decouple = "*"
 psycopg2 = "*"
+djangorestframework = "*"
+pillow = "*"
 
 [dev-packages]
 
